安珈硕的文档

--- a/Mathematics/Probability & Statistics/李贤平概率论/古典概型.md
+++ b/Mathematics/Probability & Statistics/李贤平概率论/古典概型.md
@@ -61,7 +61,7 @@ $$
 ![[古典概型-20240122.png]]
 
 这个隔板的含义是什么呢？如果说 $n=3$ ，那么也就有 $3$ 个物品的放回需要记录，此时用 $2$ 个隔板：
-![[古典概型-20240122-1.png]]
+![[古典概型-20240224.png]]
 这个就表示第一个物品被取了 $2$ 次，第二个物品被取了 $3$ 次，第三个物品被取了 $2$ 次，这样也就是 $7$ 次的取法.
 
 此时对于任意的 $n$ ，我们就需要插入 $n-1$ 个隔板，两个隔板可以插到同一个空隙当中（即没有被取到过），因此对于 $n>r$ 的情形也是同理. 
