--- a/Projects/Meetings/2024-2-23会议.md
+++ b/Projects/Meetings/2024-2-23会议.md
@@ -1,5 +1,13 @@
 ---
 date_creation: 2024-02-23
+type: meeting
+attendee:
+  - 熊泽铨
+  - 陈笑晗
+  - 施秉佚
+  - 徐杨洋
+  - 安珈硕
+  - 刘财聚
 ---
 # 与曾总的会议
 ## 项目的基本问题
