--- a/Computer Science/Courses/China MOOC - Data Mining/数据类型和统计.md
+++ b/Computer Science/Courses/China MOOC - Data Mining/数据类型和统计.md
@@ -8,3 +8,17 @@ tags:
 一个**数据集**由数据对象构成，且数据对象代表一个实体。
 - 数据对象也成为样本点、实例等等；
 - 数据库当中的行就是一个数据对象，而列则为属性；
+## 常见的数据类型
+- 标称 (Nominal)
+	- 一般表示类别和状态，从<u>有限的状态</u>当中取；
+	- 二进制数据是典型的例子，比如“是”和“否”；
+- 序数 (Ordinal)
+	- 一般是<u>有顺序</u>的类别或者连续值，例如等级和序号。
+- 区间标度数据 (Interval)
+	- 以单位长度顺序度量；
+	- 没有 0 点，且倍数没有意义，例如年份，我们不会说 2024 年是 1012 年的两倍；
+- 比率标度数据 (Ratio)
+	- 具有固定零点，有序，且可以计算倍数；
+
+不同的数据可以进行的操作也是不一样的，下表是相关的表格：
+![[数据类型和统计-20240224.png]]
