计算机集合论与逻辑创建

--- a/Mathematics/Topology/Basic Topology/齐震宇分析：点集拓扑部分/选择公理、等价叙述及其应用1.md
+++ b/Mathematics/Topology/Basic Topology/齐震宇分析：点集拓扑部分/选择公理、等价叙述及其应用1.md
@@ -43,12 +43,24 @@ tags:
 - 如果对于任意 $a\in A$ 都有 $a\leqslant b$ ，那么 $b$ 为 $A$ 的**上界**. (Upper Bound)，也称为**最大元**.
 - 如果 $b\in A$ 且 $b$ 为 $A$ 上界，那么 $b$ 为**上确界**. (Least Upper Bound).
 
-为方便表示，在后面的笔记中上确界写为 $\mathrm{lub}$ ，下确界写为 $\mathrm{glb}$ ，在上述情景下可表示为 $\mathrm{lub}_X A$ .
+为方便表示，在后面的笔记中上确界写为 $\sup$ ，下确界写为 $\inf$ ，在上述情景下可表示为 $\sup_X A$ .
 
 >[!warning] 验证是否存在
 >在使用上述符号表示之前，我们必须先验证其存在.
 
-- 如果 $b\in X$ 满足任意 $x\in X$ 都有 $b\leqslant x \Rightarrow b=x$ ，则称 $b$ 为**极大元素**. （可以直观理解为没有比它更大的元素）. 同理有极小元素.
+- 如果 $b\in X$ 满足任意 $x\in X$ 都有 $b\leqslant x \Rightarrow b=x$ ，则称 $b$ 为**极大元素** (maximal). （可以直观理解为没有比它更大的元素）. 同理有极小元素.
+
+>[!warning] 极大和最大
+>极大和最大是需要区分的概念.
+>
+> - 极大表示没有比它更大的元素
+> - 最大表示大于等于 ($\geqslant$) **所有**的元素.
+
+我们来看一个例子：
+>[!faq] 举例：最大元和极大元
+>考虑关系 $R$ 为整数间的整除关系，它显然满足偏序关系的定义，那么考察集合 $\left\lbrace 3,4 \right\rbrace$.
+
+对于集合 $\left\lbrace 3,4 \right\rbrace$ ，我们发现 $3,4$ 都是极大元素，因为其中确实没有比 $3,4$ 更大的 $3,4$ 的倍数，但是其中是没有最大元素的，因为 $3,4$ 之间相互不能整除.
 
 ### 良序
 [18:25](https://www.youtube.com/watch?v=sBr3hOFaKgE&list=PLil-R4o6jmGhUqtKbZf0LIFKd-xN__g_M&index=22#t=1105.6069639904633) 
