--- a/Mathematics/Combination/Discrete Structure And Its Algorithm/离散结构的排序算法.md
+++ b/Mathematics/Combination/Discrete Structure And Its Algorithm/离散结构的排序算法.md
@@ -121,12 +121,14 @@ $$
 
 那么此时，我们将之前的命题就能进行改写：一个排列能进行一次堆栈排序就实现排序成功**等价于**该排列具有 $231$-pattern .
 
-如何解决第二个问题？接下来
+如何解决第二个问题？我们考虑如下的引理：
+> 设 $\pi = \pi_1 \pi_2 \cdots \pi_n$ 可以分解为：
+> $$ \pi = \pi_L n \pi_R $$
+> 那么有 $s(\pi) = s(\pi_L)s(\pi_R)n$ .
 
+这个引理实际上是老师上课的时候引入用来证明一次排序成功的等价条件的，但是现在看来，它能解决一个更深层次的问题就是：一个排列最多只需要 $n-1$ 次堆栈排序就能成功排序.
 
-
-
-
+证明是十分显然的.  我们可以发现算法的复杂度实际上到了 $O(n^2)$ 的级别.
 
 
 ### 可排序结构的计数
@@ -138,7 +140,138 @@ $$
 $$
 \frac{1}{n+1} \binom{2n}{n} = c_n
 $$
-它被称为**Catalan数**.
-
+它被称为**Catalan数**. 在后续的**格路**章节当中进行证明.
 
 ## 耐心排序 (Patience Sorting)
+
+
+## Robinson-Schensted 算法
+下面考虑介绍 RS 算法，它建立了排列和**杨表**之间的关系. 同时，它也解决了耐心排序无法同时找出递增/递减子列的一个问题.
+
+### 杨表 (Young Tableau)
+在介绍杨表之前，先进行杨图的介绍. 杨图是**整数分拆**的图形表示.
+
+>[!note] 定义：整数分拆 (Integer Partition)
+>令 $n$ 是正整数，则 $n$ 的分拆指一个正整数序列：
+>$$ \lambda = (\lambda_1,\lambda_2,\cdots,\lambda_k) $$
+>满足：
+>1. $\displaystyle\sum\limits_{i=1}^k \lambda_i = n$ .
+>2. $\lambda_1\geqslant \lambda_2 \geqslant \cdots \geqslant \lambda_k$ （弱递降）.
+
+例如 $3$ 的分拆为
+$$
+(3),(2,1),(1,1,1)
+$$
+对于名词：
+
+- $\lambda_i$ 称为分拆 $\lambda$ 的**部分** (part).
+- $k$ 称为分拆 $\lambda$ 的**长度** (length). 记为 $$ \ell (\lambda) = k. $$
+- $n$ 的分拆 $\lambda$ 记为 $\lambda\vdash n$ .
+- $n$ 的所有分拆组成的集合的基数是 $$ p(n) = \# \left\lbrace \lambda \vdash n \right\rbrace. $$
+>[!note] 定义：杨图
+>给定分拆 $\lambda \vdash n$ ，其杨图可以通过如下操作得到：对 $1\leqslant i \leqslant k$ ，自上而下将 $\lambda_i$ 个方块左对齐摆放.
+
+例如对于 $3$ 的分拆：
+![[离散结构的排序算法-20240311.png]]
+
+
+
+>[!note] 定义：杨表
+>令 $\lambda$ 是 $n$ 的一个分拆，将 $n$ 个不同的正整数 $i_1,i_2,\cdots,i_n$ 填充入对应的杨图使得
+>1. 每行元素从左到右递增；
+>2. 每列元素从上到下递增.
+>
+>称满足以上填充为**形状** (shape) 为 $\lambda$ 的一个**杨表**.
+
+若填充的数字为：
+$$
+1,2,\cdots,n
+$$
+则称杨表为一个**标准杨表** (Standard Young Tableau).
+
+形状为 $\lambda$ 的标准杨表的个数记为 $f^\lambda$ .
+
+例如对于某个分拆对应的标准杨表：
+![[离散结构的排序算法-20240311-1.png]]
+
+可以知道 $f^{(2,1)} = 2$ . 现在我们开始关心对于一般的 $f^\lambda$ ，它的值应该是多少？
+
+>[!note] 定义：勾长 (Hook Length)
+>令 $u$ 是 $\lambda$ 的杨图中的一个方块，记作 $u\in \lambda$ . $u$ 处的勾长 (Hook Length) ，记作 $h_u$ ，表示 $u$ 的右侧以及下侧（包括 $u$ 自身）的方块的数目.
+
+例如下图中的标记处的方块：
+![[离散结构的排序算法-20240311-2.png]]
+它的勾长为 $3$ .
+
+>[!note] 定理：勾长公式
+>令 $\lambda\vdash n$ ，则
+>$$ f^\lambda = \dfrac{n!}{\prod\limits_{u\in \lambda} h_u}. $$
+
+### RS 算法
+RS 算法将一个杨表转换为另一个杨表，可用于构建双射：
+$$
+S_n \leftrightarrow \left\lbrace (P,Q) |P,Q\text{是具有相同形状 }\lambda\vdash n \text{ 的标准杨表}\right\rbrace
+$$
+
+- 输入：
+	- 一个杨表 $T$ .
+	- 一个正整数 $i$ ，要求 $i$ 和 $T$ 中元素不同.
+- 输出：一个新的杨表 $T'$ .
+
+#### 算法步骤
+流程：从上至下，一行一行插入.
+
+1. 将 $i$ 插入第一行，分两种情形：
+	- $i$ 比第一行所有元素大，此时 $i$ 放在第一行后面，算法结束.
+	- $i$ 比第一行某个元素小，令 $j$ 是第一行最左侧比 $i$ 大的元素，将 $j$ 替换成 $i$ .
+2. 将 $j$ 插入第二行，规则和步骤一相同.
+
+一个示例如下：
+![[离散结构的排序算法-20240311-3.png]]
+
+RS 算法的流程是可逆的，这里不对流程进行过多的阐述. 这也就是说，得到结果和最后的操作数，你能直接把最开始的杨表给推导出来.
+
+#### 排列和杨表的对应
+应用 RS 算法可以建立排列和杨表的对应：
+- 输入：$\pi = \pi_1 \pi_2 \cdots \pi_n\in S_n$ .
+- 输出：$(P,Q)$ ，$P,Q$ 是标准杨表，且形状相同.
+
+构造一系列的杨表：
+$$
+\begin{aligned}
+P_1 ,P_2,\cdots , P_n = P \\
+Q_1,Q_2,\cdots ,Q_n = Q
+\end{aligned}
+$$
+第一步，令
+$$
+P_1 = \boxed{\pi_1},\quad  Q_1 = \boxed{1}
+$$
+第二步，每次往 $P_k$ 中加入 $\pi_{k+1}$ ，$Q_k$ 中塞入 $k+1$ （根据 RS 算法的流程）.
+
+最终得到 $P_n$ 和 $Q_n$ .
+
+![[离散结构的排序算法-20240311-4.png]]
+
+>[!note] 定义：插入杨表、记录杨表
+>若 $\pi\leftrightarrow (P,Q)$ ，则称 $P$ 是 $\pi$ 的**插入杨表**，$Q$ 是 $\pi$ 的**记录杨表**. 
+
+为什么需要一个记录杨表？记录杨表可以帮助我们知道每一次的操作数是什么，根据 RS 算法的可逆性，可以一一对应到排列上面去.
+
+![[离散结构的排序算法-20240311-5.png]]
+
+>[!note] 定理
+>对 $n \geqslant 1$ ，
+>$$ n! = \sum\limits_{\lambda \vdash n}(f^\lambda)^2 $$
+
+### RS 算法和排列的最长递增/递降子列
+设 $\pi = \pi_1 \pi_2\cdots \pi_n\in S_n$ ，$\pi$ 的最长递增子列的长度记作 $\mathrm{in}(\pi)$ ，最长递降子列的长度记作 $\mathrm{de}(\pi)$ .
+
+耐心排序可以计算 $\mathrm{in}(\pi)$ ，而 RS 算法可同时计算 $\mathrm{in}(\pi)$ 和 $\mathrm{de}(\pi)$ .
+
+>[!note] 定理：RS算法计算 $\mathrm{in}(\pi)$ 和 $\mathrm{de}(\pi)$ 
+>RS 算法下，设
+>$$ \pi\leftrightarrow (P,Q). $$
+>令 $\mathrm{row}(P)$ 和 $\mathrm{col}(P)$ 分别表示 $P$ 的第一行和第一列包含的方块的个数，则
+>$$ \mathrm{in}(\pi) = \mathrm{row}(P),\mathrm{de}(\pi) = \mathrm{col}(P). $$
+
