--- a/Mathematics/Probability & Statistics/李贤平概率论/古典概型.md
+++ b/Mathematics/Probability & Statistics/李贤平概率论/古典概型.md
@@ -107,6 +107,18 @@ $$
 $$
 (1+x)^\alpha = \sum\limits_{r=0}^\infty \binom{\alpha}{r}x^r
 $$
+对于负数出现在组合数当中的情况：
+$$
+\binom{-a}{k} = (-1)^k \binom{a+k-1}{k}
+$$
+上述是一个形式上的定义，换句话说可以这么定义有负数的组合数，在一些组合数的计算当中有利.
+
+如果想要一个好一点的记忆方式，可以考虑将负数的阶乘视为
+$$
+(-k)! =  \prod_{i=0}^\infty (-k-i)
+$$
+这么定义虽然看着没啥意义（因为右边不收敛，和负整数为 $\Gamma$ 函数极点是对应的）但是可以帮助理解，姑且这么记忆吧（
+
 ## 二项分布与超几何分布
 ### 二项分布
 二项分布对应的是有放回抽样场合，把 $a+b$ 件产品编号，有放回抽 $n$ 次，次品正好出现 $k$ 次的数目是
@@ -180,4 +192,5 @@ $$
 x_1+x_2+x_3+x_4 = 2\end{cases}
 $$
 答案为 $\displaystyle  \binom{13}{3}$ ，复习的时候不妨一试. 
+
 
