--- a/Mathematics/Probability & Statistics/李贤平概率论/李贤平概率论：第一章习题.md
+++ b/Mathematics/Probability & Statistics/李贤平概率论/李贤平概率论：第一章习题.md
@@ -71,9 +71,6 @@ $$
 利用容斥原理即可. $\square$
 
 
-
-
-
 ### 取数问题
 下面讨论 T20~T23 四道题，这四个题非常相似，可以直接记忆并应用.
 
@@ -132,6 +129,45 @@ $\square$
 > 
 > 这个示例启发了我们一点：古典概型中一定要尽量避免有重复组合数，甚至是无序的情况，因为无序背后往往需要考虑一种方案对应的有序方案是否是等可能的.
 
-## 几何概型
-### 
+## 无限比赛
+
+>[!faq] 李贤平概率论第一章习题 T41
+>甲乙丙按照下面的规则进行比赛：第一局由甲乙参加，而丙轮空，由第一轮的胜利者和丙进行第二轮的比赛，失败者轮空，如此进行比赛，一直到某人连胜两场为止，这个人成为优胜者. 
+>
+> 若甲乙丙单场获胜概率均为 $\dfrac{1}{2}$ ，则甲乙丙最终获胜的概率是多少？
+
+对于无限继续的比赛，由于没有总场数的限制，我们需要进行找规律.
+
+设事件 $A$ 为“甲为优胜者”，$B$ 为“乙是优胜者”，$C$ 为“并是优胜者”，对于单场比赛，$a$ 为“甲赢得该局”，$b,c$ 以此类推.
+
+由于对称性，可以知道 $P(A)=P(B)$ ，$P(C)=1-2P(A)$ . 接下来考虑找规律.
+
+所有可能的情形为：
+$$
+\begin{aligned}
+& aa,acc,acbb,acbaa,acbacc\cdots \\
+& bb, bcc,bcaa,bcabb,bcabcc,\cdots
+\end{aligned}
+$$
+在注意力集中的情况下，我们发现如下的规律：
+
+> 比赛结束时，丙为优胜者等价于丙赢下了所有第 $3$ 的倍数的场次.
+
+这个结论简单说明一下：
+
+- 在比赛结束时，如果丙赢下了所有第 $3$ 的倍数场次，那么如果第一场是乙获胜，则总场数为 $3$ 的倍数，自然丙为优胜者，否则为 $3n+1$ 场，也必然是丙获胜.
+- 若丙为优胜者，则场次只能是 $3n$ 和 $3n+1$ ，逆推可以得到结论.
+
+因此，对于丙，如果其为获胜者，则有
+$$
+\begin{aligned}
+P(C) &= [P(acc)+P(bcc)] +[P(acbacc)+P(bcabcc)]+\cdots \\
+&=2\times \frac{1}{2^{3}} +2 \times \frac{1}{2^{6}} +\cdots
+\end{aligned}
+$$
+从而
+$$
+P(C) = \sum\limits_{k=1}^\infty \frac{1}{2^{3k-1}} = \frac{2}{7}
+$$
+因此 $P(A) = P(B) = \frac{5}{14}$ . $\square$
 
