--- a/Mathematics/Topology/Basic Topology/📚一般拓扑学基础 - 张德学/完备度量空间.md
+++ b/Mathematics/Topology/Basic Topology/📚一般拓扑学基础 - 张德学/完备度量空间.md
@@ -33,10 +33,84 @@ $$
 
 上述的例子说明对于一个度量空间，其完备性由度量与集合两方面决定.
 
+对于一个不完备的度量空间，它的 Cauchy 列相对于本集合是不收敛的，但其实用一个更准确的说法来说是**收敛到集合外**了，比如 $\mathbb{Q}$ 在欧氏度量下都不是完备的，这是因为有理数列可以收敛到一个无理数.
 
 ### 完备度量空间的性质
+#### 闭子集
+>[!note] 定理：完备度量空间的闭子集
+>1. 若 $(X,d)$ 是完备度量空间，$Y$ 是 $X$ 的闭子集，则 $(Y,d)$ 是完备度量空间.
+>2. 若 $(Y,d)$ 是完备度量空间，则 $Y$ 是 $X$ 的闭子集.
 
-## Banach 不动点定理
+上述的定理概括一下就是：完备度量空间的子集是闭集等价于它是完备度量空间.
+
+证明相对简单，对于完备度量空间 $(X,d)$ ，其中的 Cauchy 列一定是收敛的，那么 $Y$ 中的 Cauchy 列也是收敛的，此时 $Y$ 是否为闭集决定了任意的 Cauchy 列是否都能收敛到 $Y$ 中的某个点. 因此等价关系是显然的. $\square$
+
+#### 闭集套定理
+下面给出闭集套定理，我们曾在学习过 $(\mathbb{R}^n,d)$ 中的闭集套定理，但是现在我们需要推广到完备度量空间当中.
+
+首先先简单引入**直径**的概念，设 $(X,d)$ 为度量空间，$A \subseteq X$ ，若 $\left\lbrace d(x,y): x,y \in A \right\rbrace$ 是 $\mathbb{R}$ 的有界子集，则称 $A$ 有界，称
+$$
+\mathrm{diam}(A) := \sup\left\lbrace d(x,y): x,y \in A \right\rbrace
+$$
+
+
+>[!note] 定理：闭集套定理
+>度量空间 $(X,d)$ 完备**当且仅当**任给 $X$ 的单调降的非空闭集列
+>$$ F_0 \supseteq F_1 \supseteq F_2 \supseteq \cdots$$
+>若 $F_n$ 的直径趋于 $0$ ，则 $\bigcap\limits_{n \in \mathbb{N}}F_n \neq \varnothing$ .
+
+证明：
+对于 $n\in \mathbb{N}$ ，任取 $x_n\in F_n$ ，则 $\left\lbrace x_n \right\rbrace_{n \geqslant 1}$ 为 Cauchy 列，从而由于 $(X,d)$ 是完备度量空间，$x_n$ 收敛到 $x\in \bigcap\limits_{n\in \mathbb{N}}F_n$ ，从而必要性成立.
+
+对于充分性，设 $\left\lbrace x_n \right\rbrace_{n \geqslant 1}$ 为 Cauchy 列，任意给定 $n\in \mathbb{N}$ ，此时可以构造
+$$
+F_n = \overline{\left\lbrace x_m : m \geqslant n \right\rbrace}.
+$$
+$F_n$ 显然是一个单调降的闭集，取 $x\in \bigcap\limits_{n\in \mathbb{N}} F_n$ ，下面需要说明 $x_n\to x$ . 假设 $x_n\not\to x$ ，那么说明 $d(x_n,x)\geqslant \varepsilon_0$ ，取
+$$
+ \overline{\left\lbrace x_k,x_m \in \left\lbrace x_n \right\rbrace: d(x_m,x_k) \leqslant \frac{\varepsilon_0}{2} \right\rbrace}
+$$
+这个集合是显然是某个 $F_n$ 的超集，并且它也为闭集，这就使得它其中不包含 $x$ ，这和 $x\in \bigcap\limits_{n\in \mathbb{N}} F_n$ 是矛盾的，从而命题成立. $\square$ 
+
+## Banach 不动点定理及其应用
+### 压缩映射
+设 $X$ 为度量空间，$D \subseteq X$ ，若存在实数 $K$ 使得对所有的 $x_1,x_2\in X$ 都有
+$$
+d_Y(f(x_1),f(x_2)) \leqslant K d_X(x_1,x_2)
+$$
+则称 $f$ 为 **Lipschitz 映射**. 若存在 $K<1$ ，则称为**压缩映射**.
+
+我们在数分中曾经学过压缩映射原理，用于解决数列极限问题，这里是它的度量空间中的形式.
+
+### Banach 不动点定理
+>[!note] 定理：Banach 不动点定理
+>设 $(X,d)$ 为非空的**完备度量空间**，$f:(X,d)\to (X,d)$ 为压缩映射，则 $f$ 连续且有唯一的一个**不动点**.  即存在唯一的 $x\in X$ 满足 $f(x)=x$ .
+
+先说明存在性，取 $x_0 \in X$ ，构造序列：
+$$
+x_1=f(x_0) ,x_2 = f(x_1),\cdots , x_n = f(x_{n-1})\cdots
+$$
+此时，由于 $f$ 为压缩映射，可以知道存在 $r< 1$ 使得
+$$
+rd(x_n,x_m) \geqslant d(f(x_n),f(x_m))=d(x_{n+1},x_{m+1})
+$$
+因此：
+$$
+d(x_m,x_{m+1})\leqslant r d(x_{m-1}, x_{m})\leqslant \cdots \leqslant r^{m-1} d(x_0,x_1)
+$$
+由于 $r<1$ ，可以知道 $\left\lbrace x_n \right\rbrace_{n \geqslant1}$ 为 Cauchy 列，从而收敛，收敛到的 $x$ 满足
+$$
+f(x) = \lim_{n\to \infty} f(x_n) = \lim_{n\to \infty} x_{n+1} = x
+$$
+从而不动点存在.
+
+下面证明唯一性，设 $f(x)=x,f(y)=y$ ，此时
+$$
+d(f(x),f(y))\leqslant rd(x,y) = rd(f(x),f(y))
+$$
+但是 $r<1$ ，这是不可能的，因此出现矛盾，从而不动点唯一. $\square$
+
+
 
 
 
@@ -70,12 +144,18 @@ $$
 $$
 可知 $\mathbb{Q}$ 可以表为可数个无处稠子集的并，从而为**第一纲集**.
 
+实际上，无处稠子集可以通俗理解为没有稠密性的子集，$\mathbb{R}$ 中有理数是具有稠密性的，所以也就有 $\mathbb{Q}$ 不为无处稠子集.
+
 ### 第一纲集的性质
 
 - 开集 $U$ 是稠子集当且仅当它的补集为无处稠子集；
+	- $\overline{U}$ 等于全集 $X$ 时，$(X\backslash U)^\circ = X\backslash \overline{U} = \varnothing$ . 
 - 无处稠子集的闭包是无处稠子集；
-- 无处稠子集是第一纲集；（反过来不一定成立，例如 $\mathbb{R}$ 中的 $\mathbb{Q}$）
-- 可数个第一纲集的并是第一纲集. （因为可数个可数个无处稠子集的并为可数个无处稠子集的并）.
+	- 无处稠子集的闭包的闭包即为它的闭包，内部自然为空集.
+- 无处稠子集是第一纲集；
+	- 注意反过来不一定成立，例如 $\mathbb{R}$ 中的 $\mathbb{Q}$ .
+- 可数个第一纲集的并是第一纲集. 
+	- 因为可数个(可数个无处稠子集的并)为可数个无处稠子集的并.
 - 若 $A$ 是 $X$ 的第一纲集，并且 $B \subseteq A$ ，那么 $B$ 也是 $X$ 的第一纲集. （第一纲集的子集也是第一纲集）
 
 
@@ -84,5 +164,23 @@ $$
 >[!note] 定理：Baire 纲定理
 >设 $(X,d)$ 为非空的完备度量空间.
 >1. $X$ 的可数个开的稠子集的交是稠子集；
->2. $X$ 的每个稀疏集的内部是空集.
+>2. $X$ 的每个第一纲集的内部是空集.
+
+这里面的两个命题实际上是等价的，只推 1 到 2 ，2 到 1 类似.
+
+设 $\left\lbrace A_n \right\rbrace$ 为 $X$ 中的可数个无处稠子集，$U_n = X\backslash\overline{A_n}$ 为开稠子集，于是 $\bigcap\limits_{n=1}^\infty U_n$ 为稠子集.
+$$
+\left(\bigcup_{n=1}^\infty A_n \right)^\circ \subseteq \left(\bigcup_{n=1}^\infty \overline{A_n} \right)^\circ = 
+X\backslash \overline{X \backslash \bigcup_{n=1}^\infty \overline{A_n} } = X\backslash \overline{\bigcap_{n=1}^\infty U_n} = \varnothing
+$$
+因此二者等价.
+
+-----
+**Baire 纲定理的证明**
+
+>[!HINT] 提示
+>根据前面的推导，我们只需证明 1 .
+>设 $\left\lbrace U_n \right\rbrace_{n\in \mathbb{N}}$ 是 $X$ 的可数个开稠子集，可以证明 $\bigcap\limits_{n\in \mathbb{N}} U_n$ 与 $X$ 的每个非空开集相交.
+
+
 
