--- a/Mathematics/Set Theory & Logic/Computer Set Theory & Logic/Homework/计算机集合论与逻辑第一周作业.md
+++ b/Mathematics/Set Theory & Logic/Computer Set Theory & Logic/Homework/计算机集合论与逻辑第一周作业.md
@@ -10,17 +10,23 @@ related_course:
 考虑语句归纳法：
 设性质 $\mathcal{P}$ 为 “任何恰当初始字符串不能组成语句”.
 
+-----
+（归纳基础）
 对两个字符和三个字符的情形：
 - 两个字符时，即 $\neg p$ ，恰当初始字符串仅有 $\neg$ ，这显然不能成为一个语句；
 - 三个字符时，即 $\bullet p_1 p_2$ ，其中 $\bullet$ 为二元连接词，此时两个恰当初始字符串 $\bullet$ 和 $\bullet p_1$ 都不能成为语句.
 
-故对于两个字符和三个字符组成的语句，它们都具有性质 $\mathcal{P}$ ，那么对于已含有性质 $\mathcal{P}$ 的语句 $\varphi$ 和 $\psi$ ：
-- 对于 $\neg \varphi$ ，此时取恰当初始字符串为 $\neg \varphi_0$ ，如果 $\neg\varphi_0$ 能成为语句，则 $\varphi_0$ 本身也将成为语句，这违反了归纳假设.
-- 对于 $\bullet\varphi \psi$ ：
-	- 如果取的恰当初始字符串包含了完整的 $\varphi$ ，则可记为 $\bullet \varphi \psi_0$ ，但是 $\psi_0$ 并不能构成语句.
-	- 此时取的恰当初始字符串不能包含完整的 $\varphi$  ，记为 $\bullet \varphi_0$ ，但是此时的二元连接词和原子语句之间的数量关系无法对应.
+-----
+设 $\varphi$ 和 $\psi$ 满足归纳假设（即具有性质 $\mathcal{P}$），那么：
+(i) 对于 $\neg \varphi$ ，此时取恰当初始字符串 $\neg \varphi_0$ ，如果它为语句，则 $\varphi_0$ 自身也可构成 $L$-语句，这违反了归纳假设.
+
+(ii) 对于 $\bullet \varphi \psi$ ，如果取到的恰当初始字符串形如 $\bullet \varphi \psi_0$ ，那么中缀表达式可以写为 $(\varphi) \bullet (\psi_0)$ ，$\varphi$ 为语句而 $\psi_0$ 不为语句，从而不为 $L$-语句.
 
 因此，$\neg \varphi$ 和 $\bullet \varphi \psi$ 均具有性质 $\mathcal{P}$ . 根据语句归纳法命题成立. $\square$
+
+下面利用该命题证明命题 1.1.5：
+
+如果 $\theta = \bullet \varphi \psi$ 当中的 $\varphi$ 和 $\psi$ 不唯一，则有 $\bullet \varphi'\psi '$ ，其中 $\varphi',\psi'$ 均为语句，若 $\varphi'$ 的长度大于 $\varphi$ ，则由习题结论可知 $\varphi$ 不能为语句，矛盾！若 $\varphi'$ 长度小于 $\varphi$ ，则 $\varphi'$ 不能为语句，也矛盾，从而 $\varphi' = \varphi$ . $\square$
 
 >[!faq] Exercise 1.3.19
 >令 $|$ 为具有如下语义的二元连接词：
